--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build -t mohamedbalbola/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run stephengrider/docker-react npm run test -- --coverage
-
-
+  - docker run -e CI=true mohamedbalbola/docker-react npm run test -- --coverage 
