--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 sudo: required
+
+language: generic 
+
 services:
   - docker
 
@@ -7,3 +10,17 @@ before_install:
 
 script:
   - docker run -e CI=true mohamedbalbola/docker-react npm run test -- --coverage 
+
+deploy:
+  provider: elasticbeanstalk
+  access_key_id:
+    secure: "$Access_key_ID"
+  secret_access_key:
+    secure: "$Secret_access_key"
+  region: "us-east-1"
+  app: "Docker"
+  env: "Docker-env"
+  bucket_name: "elasticbeanstalk-us-east-1-663322992657"
+  bucket_path: "Docker"
+  on: 
+   branch: master
