--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,8 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id:
-    secure: "$Access_key_ID"
-  secret_access_key:
-    secure: "$Secret_access_key"
+  access_key_id: $Access_key_ID
+  secret_access_key: $Secret_access_key
   region: "us-east-1"
   app: "Docker"
   env: "Docker-env"
