--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t mohamedbalbola/docker-react -f Dockerfile.dev .
+  - docker build -t mohamedbalbola/docker-react -f Dockerfile .
 
 script:
   - docker run -e CI=true mohamedbalbola/docker-react npm run test -- --coverage 
