--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t mohamedbalbola/docker-react -f Dockerfile .
+  - docker build -t mohamedbalbola/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true mohamedbalbola/docker-react -- --coverage  
+  - docker run -e CI=true mohamedbalbola/docker-react npm run test -- --coverage  
 
 deploy:
   provider: elasticbeanstalk
