--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,12 @@
 sudo: required
-
-language: generic 
-
 services:
   - docker
 
 before_install:
-  - docker build -t mohamedbalbola/docker-react -f Dockerfile.dev .
+  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true mohamedbalbola/docker-react npm run test -- --coverage  
+  - docker run stephengrider/docker-react npm run test -- --coverage
 
 deploy:
   provider: elasticbeanstalk
@@ -22,3 +19,4 @@ deploy:
   bucket_path: "Docker"
   on: 
    branch: master
+
