--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t stephengrider/docker-react -f Dockerfile.dev .
+  - docker build -t mohamedbalbola/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run stephengrider/docker-react npm run test -- --coverage
+  - docker run -e CI=true mohamedbalbola/docker-react npm run test -- --coverage  
 
 deploy:
   provider: elasticbeanstalk
@@ -17,9 +17,8 @@ deploy:
   secret_access_key: $Secret_access_key
   region: "us-east-1"
   app: "Docker1"
-  env: "Docker1-env""
+  env: "Docker1-env"
   bucket_name: "elasticbeanstalk-us-east-1-663322992657"
   bucket_path: "Docker"
   on: 
    branch: master
-
